--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,12 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.facebook.vq.encapp"
+        applicationId "com.facebook.encapp"
         minSdkVersion 26
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
+        setProperty("archivesBaseName", applicationId + "-v" + versionName)
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
