--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.facebook.encapp"
-        minSdkVersion 25
+        minSdkVersion 26
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -31,5 +31,5 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
-    api 'com.android.support:appcompat-v7:26.+'
+    api 'com.android.support:appcompat-v7:26.1.0'
 }
