encapp: split README into main vs. dev
Split instructions between those for the tool user and those
for the tool developer.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -13,7 +13,8 @@ lint: \
     idr.json \
     lt2.json \
     ltr.json \
-    simple.json
+    simple.qcif.json \
+    simple.720p.json
 	echo "TMPFILE: ${TMPFILE}"
 	@for file in $^ ; do \
 		echo "processing $$file" ; \
