encappng: add protobuf scheme and some example configurations
Tested:

```
$ cd tests-human/
$ make tests_pb2.py

$ rm /tmp/foo0.bin; protoc --encode=encapp.Tests ./tests-human/tests.proto --proto_path ./ < tests-human/full.pbtxt > /tmp/foo0.bin
$ xxd /tmp/foo0.bin
00000000: 0a98 0a0a 260a 0466 756c 6c12 1053 696d  ....&..full..Sim
00000010: 706c 6520 5143 4946 2054 6573 741a 0562  ple QCIF Test..b
00000020: 6174 6368 2205 3120 7365 6312 1e0a 0766  atch".1 sec....f
00000030: 6f6f 2e79 7576 1207 3137 3678 3134 3418  oo.yuv..176x144.
00000040: 0120 1e2a 0631 3020 7365 631a bf01 0a1e  . .*.10 sec.....
00000050: 0a09 7473 2d73 6368 656d 611a 1161 6e64  ..ts-schema..and
00000060: 726f 6964 2e67 656e 6572 6963 2e32 0a2f  roid.generic.2./
...

$ rm /tmp/foo1.bin; protoc --encode=encapp.Tests ./tests-human/tests.proto --proto_path ./ < tests-human/tl2.pbtxt > /tmp/foo1.bin
$ xxd /tmp/foo1.bin
00000000: 0aa3 010a 330a 0374 6c32 122c 5465 6d70  ....3..tl2.,Temp
00000010: 6f72 616c 204c 6179 6572 696e 6720 2854  oral Layering (T
00000020: 4c32 2920 4269 7472 6174 6520 436f 6e74  L2) Bitrate Cont
00000030: 726f 6c20 5465 7374 1216 0a07 666f 6f2e  rol Test....foo.
00000040: 7975 7612 0731 3736 7831 3434 1801 201e  yuv..176x144.. .
00000050: 1a34 0a1e 0a09 7473 2d73 6368 656d 611a  .4....ts-schema.
00000060: 1161 6e64 726f 6964 2e67 656e 6572 6963  .android.generic
00000070: 2e32 1203 6176 6332 0832 3530 206b 6270  .2..avc2.250 kbp
00000080: 7338 0280 011e 221e 0a1c 08c2 0312 0d76  s8...."........v
00000090: 6964 656f 2d62 6974 7261 7465 2208 3530  ideo-bitrate".50
000000a0: 3020 6b62 7073                           0 kbps

$ rm /tmp/foo2.bin; protoc --encode=encapp.Tests ./tests-human/tests.proto --proto_path ./ < tests-human/simple.pbtxt > /tmp/foo2.bin
$ xxd /tmp/foo2.bin
00000000: 0a59 0a1a 0a06 7369 6d70 6c65 1210 5369  .Y....simple..Si
00000010: 6d70 6c65 2051 4349 4620 5465 7374 1216  mple QCIF Test..
00000020: 0a07 666f 6f2e 7975 7612 0731 3736 7831  ..foo.yuv..176x1
00000

--- a/tests-human/Makefile
+++ b/tests-human/Makefile
@@ -25,3 +25,14 @@ lint: \
 			mv ${TMPFILE} $$file; \
 		fi \
 	done
+
+
+
+tests_pb2.py: tests.proto
+	protoc -I=. --python_out=. tests.proto
+
+clean:
+	rm -f *pyc
+
+realclean: clean
+	rm -f tests_pb2.py
