encapp: measurement will not start until frame rate is stable (encoders).
Consider the input stable after 2 sec with less than +/- 1fps deviation.
TODO: if not wanted it should be possible to avoid
Proto definition updated.

--- a/proto/Makefile
+++ b/proto/Makefile
@@ -2,7 +2,7 @@ all: none
 
 
 tests_pb2.py: tests.proto
-	protoc -I=. --python_out=. tests.proto
+	protoc -I=. --python_out=../scripts/proto/ tests.proto
 
 clean:
 	rm -f *pyc
