encapp: add system test for encapp.py script
Add system test for encapp.py script intending to use real
android device connected to the host machine.
Split scripts/tests directory into system and unit tests
Unit tests intended to be run with pytest or unittest
System tests intended to be run with pytest
$ ANDROID_SERIAL=<serial_no> python3 -m pytest tests/system/test_encapp.py

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,4 +22,4 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest humanfriendly numpy pandas seaborn protobuf
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          pytest scripts/tests
+          pytest scripts/tests/unit
