encapp: use protobuf text format for configuration
Protobuf text are human-readable, so they are preferred for testing
definitions. It will also allow removing all tests/*bin files

This requires replacing protobuf-lite with protobuf in the java app
(protobuf-lite has no support for text format).

Includes:
* replace protobuf-lite with protobuf on the java side
* have both sides use protobuf text instead of protobuf bin
* keep the protobuf text of protobuf bin conversion in order to check
  the validity of the former
* upgraded gradle and protobuf-gradle-plugin (don't ask :'( )
* rewrite bitrate declaration functions (`parse_bitrate_field()` and
  `convert_to_bps()`). The latter was particularly buggy. Next patch
  will add unittests
* always get a copy of the logcat, even when the test ran ok
* refactor major parts of the encapp.py script
* added infra to make the tests run separately (future work)

Tested:

```
$ ./scripts/encapp.py -ddd run tests/bitrate_surface_rgba.pbtxt --device-workdir /data/data/com.facebook.encapp --bitrate "50k,100k-1Mbps-100k,1Mbps-2Mbps-200k"...
results collect: ['testing_mydevice_20220920_164818/encapp_11d4b786-2e3a-4543-8310-af8578603ec4.json', 'testing_mydevice_20220920_164818/encapp_2dc742c5-740d-4751-9e31-205c39bb4fd4.json', 'testing_mydevice_20220920_164818/encapp_30e19821-346a-43fb-8afc-43e8bb605858.json', 'testing_mydevice_20220920_164818/encapp_3d890925-9a25-4d18-a7b2-e54b08626e3b.json', 'testing_mydevice_20220920_164818/encapp_4122fbee-07e7-4bb0-8f54-800419fda955.json', 'testing_mydevice_20220920_164818/encapp_5b474e27-3569-4aed-b248-2942bd83fc12.json', 'testing_mydevice_20220920_164818/encapp_6c4195e3-2db2-4580-8f22-b9cb0af9902e.json', 'testing_mydevice_20220920_164818/encapp_867f0bf5-1146-47b8-9d18-ed2bc3248551.json', 'testing_mydevice_20220920_164818/encapp_8b2d72c2-5b8b-4e40-9e99-05ebb69671f7.json', 'testing_mydevice_20220920_164818/encapp_b5237c29-3312-4729-a792-5cc76f92da1a.json', 'testing_mydevice_20220920_164818/encapp_

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,26 +38,18 @@ android {
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     api 'androidx.appcompat:appcompat:1.0.0'
-    implementation 'com.google.protobuf:protobuf-lite:3.0.0'
+    implementation group: 'com.google.protobuf', name: 'protobuf-java', version: '3.12.0'
 }
 
 
 protobuf {
     protoc {
-        artifact = 'com.google.protobuf:protoc:3.0.0'
-    }
-    plugins {
-        javalite {
-            artifact = 'com.google.protobuf:protoc-gen-javalite:3.0.0'
-        }
+        artifact = 'com.google.protobuf:protoc:3.11.0'
     }
     generateProtoTasks {
         all().each { task ->
-            task.builtins {
-                remove java
-            }
             task.plugins {
-                javalite {}
+                java {}
             }
         }
     }
