--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     api 'androidx.appcompat:appcompat:1.0.0'
     implementation group: 'com.google.protobuf', name: 'protobuf-java', version: '3.12.0'
+    implementation group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.12.0'
+    implementation 'com.google.code.gson:gson:2.8.0'
 }
 
 
