--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,6 +20,6 @@ jobs:
       - name: Pytest python
         run: |
           python -m pip install --upgrade pip
-          pip install pytest humanfriendly numpy pandas seaborn protobuf
+          pip install pytest humanfriendly numpy pandas seaborn protobuf argparse_formatter
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           pytest scripts/tests/unit
