--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,12 @@ android {
         }
     }
 
+    lintOptions {
+        checkReleaseBuilds false
+        //If you want to continue even if errors found use following line
+        abortOnError false
+    }
+
     sourceSets {
         main {
             proto {
