encapp: generate python and swift code together
Changed the Makefile in proto.
"make all"
generate both swift and python
"make realclean" removed both generated files

Signed-off-by: JohanBlome <jblome@fb.com>

--- a/proto/Makefile
+++ b/proto/Makefile
@@ -1,11 +1,12 @@
-all: none
-
-
-tests_pb2.py: tests.proto
-	protoc -I=. --python_out=../scripts/proto/ tests.proto
-
+python_path=../scripts/proto/
+swift_path=../ios/Encapp/
+# java will be generated when building with gradle
+all: tests.proto
+	protoc -I=. --python_out=$(python_path) tests.proto
+	protoc -I=. --swift_out=$(swift_path) tests.proto
 clean:
 	rm -f *pyc
 
 realclean: clean
-	rm -f tests_pb2.py
+	rm -f $(python_path)tests_pb2.py
+	rm -f $(swift_path)tests.pb.swift
