encapp: update paths "scripts" is now "encapp" if refering to scripts folder.
Signed-off-by: Johan Blome <jblome@meta.com>

--- a/proto/Makefile
+++ b/proto/Makefile
@@ -1,4 +1,4 @@
-python_path=../scripts/proto/
+python_path=../encapp/proto/
 swift_path=../ios/Encapp/
 # java will be generated when building with gradle
 all: tests.proto
