--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.google.protobuf'
 
 android {
-    compileSdkVersion 31
+    namespace 'com.facebook.encapp'
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId "com.facebook.encapp"
@@ -43,18 +44,22 @@ android {
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
     api 'androidx.appcompat:appcompat:1.0.0'
-    implementation group: 'com.google.protobuf', name: 'protobuf-java', version: '3.12.0'
-    implementation group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.12.0'
+    implementation group: 'com.google.protobuf', name: 'protobuf-java', version: '3.24.0'
+    implementation group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.24.0'
     implementation 'com.google.code.gson:gson:2.8.0'
 }
 
 
 protobuf {
     protoc {
-        artifact = 'com.google.protobuf:protoc:3.18.0'
+        artifact = 'com.google.protobuf:protoc:3.24.0'
     }
+    plugins {
+        java {}
+    }
+
     generateProtoTasks {
-        all().each { task ->
+        all().configureEach { task ->
             task.plugins {
                 java {}
             }
