--- a/build.gradle
+++ b/build.gradle
@@ -3,24 +3,19 @@
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()  // safer than jcenter (deprecated)
         gradlePluginPortal()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.3'
-        classpath("com.google.protobuf:protobuf-gradle-plugin:0.8.19")
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath 'com.android.tools.build:gradle:8.1.0'
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.9.4'
     }
-
-
 }
 
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
