--- a/requirements.txt
+++ b/requirements.txt
@@ -2,19 +2,19 @@ argparse-formatter>=1.4
 fonttools>=4.57.0
 humanfriendly>=10.0
 iniconfig>=2.1.0
-kiwisolver>=1.4.8
-matplotlib>=3.10.1
+kiwisolver>=1.4
+matplotlib>=3.10
 numpy>=1.25.2
-packaging>=24.2
-pandas>=2.0.3
-pillow>=11.1.0
-pluggy>=1.5.0
-protobuf>=6.30.2
-pyparsing>=3.2.3
+packaging>=24
+pandas>=2.0
+pillow>=11.1
+pluggy>=1.5
+protobuf>=6.30
+pyparsing>=3.2
 pytest>=8.3.3
-python-dateutil>=2.9.0.post0
+python-dateutil>=2.9
 pytz>=2025.2
 scipy>=1.15.2
-seaborn>=0.11.1
-six>=1.17.0
+seaborn>=0.11
+six>=1.17
 tzdata>=2025.2
