Change vanilla flavour to Default

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
     flavorDimensions "feature"
 
     productFlavors {
-        vanilla {
+        Default {
             dimension "feature"
         }
 
