encapp: fix for the huge apk size in default flavor
Signed-off-by: Lars Johan Blome <jblome@meta.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,7 +76,8 @@ task javacppExtract(type: Copy) {
     from { configurations.javacpp.collect { zipTree(it) } }
     include "lib/**"
     into "$buildDir/javacpp/"
-    android.sourceSets.main.jniLibs.srcDirs += ["$buildDir/javacpp/lib/"]
+    // Only add to lcevc flavor, not the main sourceset
+    android.sourceSets.lcevc.jniLibs.srcDirs += ["$buildDir/javacpp/lib/"]
 
     tasks.getByName('preBuild').dependsOn javacppExtract
 }
