--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,4 +38,4 @@ jobs:
         with:
           api-level: ${{ matrix.api-level }}
           script: |
-            ./gradlew build
+            ./gradlew buildDefaultDebug
