encapp: fix for gradle protobuf version The new makefile functionality in proto gave gradle some issues build java.
Signed-off-by: Johan Blome <johan@gunhildcarling.net>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ android {
         main {
             proto {
                 srcDir '../proto/'
+                exclude 'protoc-3.20.3/**'
             }
         }
 
