--- a/native/x264_enc/Makefile
+++ b/native/x264_enc/Makefile
@@ -3,8 +3,8 @@ clean:
 
 debug:
 	make -C jni debug
-	cp libs/arm64-v8a/libnativeencoder.so ../../app/src/main/jniLibs/arm64-v8a
+	cp libs/arm64-v8a/libnativeencoder.so /tmp/
 
 all:
 	make -C jni all
-	cp libs/arm64-v8a/libnativeencoder.so ../../app/src/main/jniLibs/arm64-v8a
+	cp libs/arm64-v8a/libnativeencoder.so /tmp/
